<resources>
    <string name="app_name">CookBook</string>
    <!-- to toggle the open close button of the navigation drawer -->
    <string name="nav_open">Open</string>
    <string name="nav_close">Close</string>
    <string name="login_title">Welcome Back!</string>
    <string name="registration_title">Welcome to CookBook!</string>
    <string name="username">Username</string>
    <string name="email">Email</string>
    <string name="tell_opinion">Tell us what you think!</string>
    <string name="password">Password</string>
    <string name="login">Login</string>
    <string name="register">Register</string>
    <string name="don_t_have_an_account">Don\'t have an account?</string>
    <string name="sign_up">Sign Up</string>
    <string name="or">or</string>
    <string name="continue_as_guest">Continue as Guest</string>
    <string name="login_failed">Login Failed</string>
    <string name="registration_failed">Registration Failed</string>
    <string name="changed_your_mind">Changed your mind?</string>
    <string name="successfully_logged_out">Successfully logged out. You can proceed using the application as guest.</string>
    <string name="people_like">%1$d people like this</string>
    <string name="recipe_title">Recipe Title</string>
    <string name="ingredients">Ingredients:</string>
    <string name="preparation">Preparation:</string>
    <string name="comments">Comments:</string>
    <string name="add_comment">Add a comment</string>
    <string name="my_recipes">My Recipes</string>
    <string name="my_favorites">My Favorites</string>
    <string name="save_changes">Save</string>
    <string name="delete_changes">Delete</string>
    <string name="add">Add</string>
    <string name="name">Name</string>
    <string name="name_colon">Name:</string>
    <string name="quantity">Quantity</string>
    <string name="measure">Measure</string>
    <string name="new_recipe">New recipe</string>
    <string name="add_new_recipe">Add a new recipe</string>
    <string name="lorem_ipsum">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</string>
</resources>