<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/ingredientsHeader"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="horizontal"
    android:weightSum="10"
    tools:context=".recipe.ManageRecipeActivity">

    <TextView
        android:id="@+id/ingredientName"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_weight="5"
        android:text="@string/name"
        android:textStyle="bold" />

    <TextView
        android:id="@+id/ingredientQuantity"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_weight="1.5"
        android:text="@string/quantity"
        android:textAlignment="viewEnd"
        android:textStyle="bold" />

    <TextView
        android:id="@+id/ingredientMeasure"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_weight="2.5"
        android:text="@string/measure"
        android:textAlignment="viewEnd"
        android:textStyle="bold" />

    <TextView
        android:id="@+id/ingredientAction"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:textAlignment="viewEnd" />
</LinearLayout>