<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/recipeView"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_marginVertical="10dp"
    tools:context=".recipe.ManageRecipeActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="10dp"
        android:orientation="vertical">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/image_container"
            android:layout_width="match_parent"
            android:layout_height="300dp">


            <ImageView
                android:id="@+id/recipeImage"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                tools:layout_editor_absoluteX="-1dp"
                tools:layout_editor_absoluteY="20dp" />

            <RelativeLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="@color/white"
                android:padding="4dp"
                android:translationZ="1dp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent">

                <ImageView
                    android:id="@+id/recipeImageEdit"
                    android:layout_width="24dp"
                    android:layout_height="24dp"
                    android:background="@drawable/baseline_edit_24" />
            </RelativeLayout>

        </androidx.constraintlayout.widget.ConstraintLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:orientation="vertical"
            android:weightSum="2">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/name_colon"
                android:textSize="18sp"
                android:textStyle="bold" />


            <EditText
                android:id="@+id/recipeName"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:drawableLeft="@drawable/baseline_fastfood_24"
                android:drawablePadding="10dp"
                android:drawableTint="#64748b"
                android:inputType="text"
                android:paddingBottom="12dp"
                android:textSize="16sp" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:orientation="vertical">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="Price:"
                android:textSize="18sp"
                android:textStyle="bold" />


            <EditText
                android:id="@+id/price"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:drawableLeft="@drawable/baseline_euro_24"
                android:drawablePadding="10dp"
                android:drawableTint="#64748b"
                android:inputType="numberDecimal"
                android:paddingBottom="12dp"
                android:textSize="16sp" />
        </LinearLayout>


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:orientation="vertical">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="Labels:"
                android:textSize="18sp"
                android:textStyle="bold" />

            <com.example.cookbook.ui.custom.MultiSelectionSpinner
                android:id="@+id/labels_dropdown"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:backgroundTint="@color/teal_700"
                android:paddingBottom="12dp" />

        </LinearLayout>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:text="@string/ingredients"
            android:textSize="18sp"
            android:textStyle="bold" />

        <LinearLayout
            android:id="@+id/ingredientList"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:orientation="vertical"
            android:visibility="gone">

            <include layout="@layout/ingredient_list_header" />
        </LinearLayout>

        <Button
            android:id="@+id/addIngredientBtn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:backgroundTint="#ccfbf1"
            android:onClick="onAddIngredientClick"
            android:text="@string/add"
            android:textColor="@color/teal_700" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:text="@string/preparation"
            android:textSize="18sp"
            android:textStyle="bold" />

        <EditText
            android:id="@+id/instructions"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:background="@drawable/border"
            android:inputType="textMultiLine"
            android:padding="10dp"
            android:textSize="16sp" />


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="30dp"
            android:weightSum="2">

            <Button
                android:id="@+id/deleteBtn"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginEnd="12dp"
                android:layout_weight="1"
                android:backgroundTint="@color/red"
                android:gravity="center"
                android:onClick="onDeleteClick"
                android:text="@string/delete_changes" />

            <Button
                android:id="@+id/saveBtn"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="12dp"
                android:layout_weight="1"
                android:gravity="center"
                android:onClick="onSaveClick"
                android:text="@string/save_changes" />
        </LinearLayout>


    </LinearLayout>
</ScrollView>